Reproducable Crash in Blender 2.83 Beta: Combing Hair using Python #76131

Closed
opened 2020-04-26 21:17:33 +02:00 by Alexander Meißner · 7 comments

System Information
Operating system: macOS 10.13.6 (High Sierra)
Graphics card: NVIDIA GeForce GT 650M

Exact steps for others to reproduce the error
Open the default scene, register the following operator and execute it:

class CrashByComb(bpy.types.Operator):
    bl_idname = 'particle.crash_by_comb'
    bl_label = 'Crash by Comb'

    def execute(self, context):
        bpy.ops.object.particle_system_add()
        bpy.context.object.particle_systems.active.settings.type = 'HAIR'
        bpy.ops.particle.particle_edit_toggle()
        bpy.context.scene.tool_settings.particle_edit.tool = 'COMB'
        bpy.ops.particle.brush_edit(stroke=[{'name': '', 'location': (0, 0, 0), 'mouse': (0, 0), 'pressure': 0, 'size': 0, 'pen_flip': False, 'time': 0, 'is_start': False}])
        return {'FINISHED'}

Stack Trace
blender.crash.txt

**System Information** Operating system: macOS 10.13.6 (High Sierra) Graphics card: NVIDIA GeForce GT 650M **Exact steps for others to reproduce the error** Open the default scene, register the following operator and execute it: ``` class CrashByComb(bpy.types.Operator): bl_idname = 'particle.crash_by_comb' bl_label = 'Crash by Comb' def execute(self, context): bpy.ops.object.particle_system_add() bpy.context.object.particle_systems.active.settings.type = 'HAIR' bpy.ops.particle.particle_edit_toggle() bpy.context.scene.tool_settings.particle_edit.tool = 'COMB' bpy.ops.particle.brush_edit(stroke=[{'name': '', 'location': (0, 0, 0), 'mouse': (0, 0), 'pressure': 0, 'size': 0, 'pen_flip': False, 'time': 0, 'is_start': False}]) return {'FINISHED'} ``` **Stack Trace** [blender.crash.txt](https://archive.blender.org/developer/F8496518/blender.crash.txt)

Added subscriber: @Lichtso

Added subscriber: @Lichtso
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm a crash

DRW_draw_depth_object calls DRW_mesh_batch_cache_create_requested with NULL scene, but that is accessed later on...

1   extract_task_create                   draw_cache_extract_mesh.c 4543 0x325a660      
2   mesh_buffer_cache_create_requested    draw_cache_extract_mesh.c 4704 0x325d504      
3   DRW_mesh_batch_cache_create_requested draw_cache_impl_mesh.c    1399 0x32150f6      
4   DRW_draw_depth_object                 draw_manager.c            2471 0x318fb3c      
5   ED_view3d_backbuf_depth_validate      view3d_draw.c             2226 0x3b4b455      
6   PE_set_view3d_data                    particle_edit.c           483  0x38462be      
7   brush_edit_init                       particle_edit.c           4524 0x3852680      
8   brush_edit_exec                       particle_edit.c           4775 0x38532b3      
9   wm_operator_invoke                    wm_event_system.c         1283 0x2ea310c      
10  wm_operator_call_internal             wm_event_system.c         1519 0x2ea38f2      
11  WM_operator_call_py                   wm_event_system.c         1619 0x2ea3b83      
12  pyop_call                             bpy_operator.c            268  0x351a5e8      
13  _PyMethodDef_RawFastCallKeywords                                     0x7ffff39d9c0e 
14  _PyCFunction_FastCallKeywords                                        0x7ffff39d9d43 
15  call_function                                                        0x7ffff3a0c203 
16  _PyEval_EvalFrameDefault                                             0x7ffff3a424ce 
17  _PyEval_EvalCodeWithName                                             0x7ffff39f9430 
18  _PyFunction_FastCallDict                                             0x7ffff39fab0e 
19  _PyObject_Call_Prepend                                               0x7ffff39cf8c6 
20  slot_tp_call                                                         0x7ffff3a8ff99 
Can confirm a crash `DRW_draw_depth_object` calls `DRW_mesh_batch_cache_create_requested` with NULL scene, but that is accessed later on... ``` 1 extract_task_create draw_cache_extract_mesh.c 4543 0x325a660 2 mesh_buffer_cache_create_requested draw_cache_extract_mesh.c 4704 0x325d504 3 DRW_mesh_batch_cache_create_requested draw_cache_impl_mesh.c 1399 0x32150f6 4 DRW_draw_depth_object draw_manager.c 2471 0x318fb3c 5 ED_view3d_backbuf_depth_validate view3d_draw.c 2226 0x3b4b455 6 PE_set_view3d_data particle_edit.c 483 0x38462be 7 brush_edit_init particle_edit.c 4524 0x3852680 8 brush_edit_exec particle_edit.c 4775 0x38532b3 9 wm_operator_invoke wm_event_system.c 1283 0x2ea310c 10 wm_operator_call_internal wm_event_system.c 1519 0x2ea38f2 11 WM_operator_call_py wm_event_system.c 1619 0x2ea3b83 12 pyop_call bpy_operator.c 268 0x351a5e8 13 _PyMethodDef_RawFastCallKeywords 0x7ffff39d9c0e 14 _PyCFunction_FastCallKeywords 0x7ffff39d9d43 15 call_function 0x7ffff3a0c203 16 _PyEval_EvalFrameDefault 0x7ffff3a424ce 17 _PyEval_EvalCodeWithName 0x7ffff39f9430 18 _PyFunction_FastCallDict 0x7ffff39fab0e 19 _PyObject_Call_Prepend 0x7ffff39cf8c6 20 slot_tp_call 0x7ffff3a8ff99 ```
Philipp Oeser self-assigned this 2020-04-27 11:34:38 +02:00
Member

Caused by e82827bf6e

Caused by e82827bf6e

This issue was referenced by 4fd005fefb

This issue was referenced by 4fd005fefb014a8570747b1d043de7d610078b46
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76131
No description provided.